# llm-provable-computer

./: .coderabbit.yaml  .gitignore  .pr_agent.toml  AGENTS.md  AI_REVIEW_BOTS_BEST_PRACTICES_2026-04.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  Justfile  Makefile  PAPER_DIGEST.md  README.md  RESOURCES.md  REVIEW.md  RFC-001-hull-kv-cache.md  RFC-002-2d-attention.md  RFC-003-state-encoding-compiler.md  RFC-004-005-runtime-hybrid.md  SPEC.md  best_practices.md  deny.toml
.claude/: settings.json
.codex/: HANDOFF.md  START_HERE.md  config.toml
.config/: nextest.toml
.github/: copilot-instructions.md  pull_request_template.md
.greptile/: config.json  files.json  rules.md
benches/: hull_benchmark.rs  vanillastark_benchmark.rs
benchmarks/: README.md  cases.example.json  run_benchmarks.py  validate_benchmark_result.py
docs/: README.md  article-writing-context.md  hardening-policy.md  provable-computers-article-plan.md  reproducibility.md
examples/: addition.rs  agent_step_receipt_verify.rs  agent_step_zkai_stwo_receipt_verify.rs  burn_execution.rs  counter.rs  export_onnx.rs  shared_lookup_identity.rs  vanillastark.rs
fuzz/: .gitignore  Cargo.toml  rust-toolchain.toml
fuzz/corpus/phase113_richer_gemma_window_family/: source_phase113.json  valid_phase113.json
fuzz/corpus/phase12_decoding_manifest/: valid_phase12.json
fuzz/corpus/phase12_shared_lookup_artifact/: valid_artifact.json
fuzz/corpus/phase14_decoding_manifest/: valid_phase14.json
fuzz/corpus/phase29_recursive_compression_input_contract/: valid_phase29.json
fuzz/corpus/phase30_decoding_step_proof_envelope_manifest/: valid_phase30.json
fuzz/corpus/phase35_recursive_compression_target_manifest/: valid_phase35.json
fuzz/corpus/phase36_recursive_verifier_harness_receipt/: valid_phase36.json
fuzz/corpus/phase37_recursive_artifact_chain_harness_receipt/: valid_phase37.json
fuzz/fuzz_targets/: phase113_richer_gemma_window_family.rs  phase12_decoding_manifest.rs  phase12_shared_lookup_artifact.rs  phase14_decoding_manifest.rs  phase24_decoding_state_relation_accumulator.rs  phase25_intervalized_decoding_state_relation.rs  phase26_folded_intervalized_decoding_state_relation.rs  phase27_chained_folded_intervalized_decoding_state_relation.rs  phase28_aggregated_chained_folded_intervalized_decoding_state_relation.rs  phase29_recursive_compression_input_contract.rs  phase30_decoding_step_proof_envelope_manifest.rs  phase35_recursive_compression_target_manifest.rs  phase36_recursive_verifier_harness_receipt.rs  phase37_recursive_artifact_chain_harness_receipt.rs  phase44d_phase48_against_sources_chain.rs  phase44d_phase48_serialized_chain_differential.rs  phase44d_source_chain_public_output_boundary_binding.rs  phase45_recursive_verifier_public_input_bridge.rs  phase46_stwo_proof_adapter_receipt.rs  phase47_recursive_verifier_wrapper_candidate.rs  phase48_recursive_proof_wrapper_attempt.rs  vanilla_stark_proof_loader.rs
programs/: addition.tvm  counter.tvm  decoding_step_v1.tvm  dot_product.tvm  factorial_recursive.tvm  fibonacci.tvm  gemma_block_v1.tvm  gemma_block_v2.tvm  gemma_block_v3.tvm  gemma_block_v4.tvm  linear_block_v1.tvm  linear_block_v2.tvm  linear_block_v3.tvm  linear_block_v4_with_lookup.tvm  matmul_2x2.tvm  memory_roundtrip.tvm  multiply.tvm  single_neuron.tvm  soft_attention_memory.tvm  stack_roundtrip.tvm  subroutine_addition.tvm
scripts/: agent_step_receipt_relabeling_harness.py  agent_step_zkai_stwo_composition.py  agent_step_zkai_stwo_transformer_block_composition.py  check_approximation_budget.py  check_cargo_audit_report.py  check_phase42_boundary_correspondence.py  check_phase44c_projection_root_probe.py  check_phase44d_source_root_manifest.py  collect_mutation_survivors.py  collect_release_evidence.py  generate_article_artifacts.sh  generate_bad_phase37_artifacts.py  generate_repro_bundle.sh  hardening_test_names.sh  local_merge_gate.sh  local_release_gate.sh  package-lock.json  package.json  phase40_dirty_fingerprint.py  requirements.txt  research_issue_lint.py  run_approximation_budget_suite.sh  run_asan_suite.sh  run_benchmark_reproducibility_suite.sh  run_dependency_audit_suite.sh  run_formal_contract_suite.sh  run_fuzz_smoke_suite.sh  run_known_bad_phase_artifact_corpus.sh  run_miri_suite.sh  run_mutation_suite.sh  run_mutation_survivor_tracking_suite.sh  run_paper_preflight_suite.sh  run_phase37_mutation_generator_suite.sh  run_phase38_schema_suite.sh  run_phase39_real_decode_composition_suite.sh  run_phase40_shared_proof_boundary_probe.sh  run_phase41_boundary_translation_suite.sh  run_phase42_boundary_correspondence_suite.sh  run_phase44b_public_projection_logup_probe.sh  run_phase44c_projection_root_probe.sh  (+188 more)
spec/: agent-step-receipt-v1.schema.json  benchmark-result.schema.json  fixed-point-semantics-v2.json  frontend-runtime-semantics-registry-v1.json  hf-provenance-manifest.schema.json  onnx-op-subset-v2.json  release-evidence.schema.json  statement-v1.json  statement-v2-matrix-certificate.schema.json  statement-v2-matrix-research.json  statement-v2-one-step-certificate.schema.json  statement-v2-research.json  statement-v2-trace-certificate.schema.json  statement-v2-trace-research.json  statement-v3-equivalence-kernel-research.json  statement-v3-equivalence-kernel.schema.json  stwo-phase12-shared-lookup-artifact.schema.json  stwo-phase30-decoding-step-envelope-manifest.schema.json  stwo-phase31-recursive-compression-decode-boundary-manifest.schema.json  stwo-phase32-recursive-compression-statement-contract.schema.json  stwo-phase33-recursive-compression-public-input-manifest.schema.json  stwo-phase34-recursive-compression-shared-lookup-manifest.schema.json  stwo-phase35-recursive-compression-target-manifest.schema.json  stwo-phase36-recursive-verifier-harness-receipt.schema.json  stwo-phase37-recursive-artifact-chain-harness-receipt.schema.json  stwo-phase38-paper3-composition-prototype.schema.json  stwo-phase41-boundary-translation-witness.schema.json
src/: agent_step_receipt.rs  assembly.rs  burn_model.rs  burn_runtime.rs  compiler.rs  config.rs  engine.rs  (+15 more)
(+1647 files in other folders)
