[package]
name = "transformer-vm-rs"
version = "0.1.0"
edition = "2021"
description = "A deterministic transformer-shaped virtual machine with 2D hull-backed memory lookups."
license = "MIT"
readme = "README.md"
keywords = ["transformer", "vm", "attention", "compiler", "rust"]
categories = ["compilers", "algorithms", "science"]

[[bin]]
name = "tvm"
path = "src/bin/tvm.rs"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
rand = "0.8.5"
