[package]
name = "llm-provable-computer"
version = "0.1.0"
edition = "2021"
description = "A deterministic transformer-shaped virtual machine with 2D hull-backed memory lookups."
license = "MIT"
readme = "README.md"
keywords = ["transformer", "vm", "attention", "compiler", "rust"]
categories = ["compilers", "algorithms", "science"]

[[bin]]
name = "tvm"
path = "src/bin/tvm.rs"

[features]
default = []
burn-model = ["dep:burn"]
onnx-export = ["dep:onnx-protobuf", "dep:protobuf", "dep:tract-onnx"]
full = ["burn-model", "onnx-export"]

[dependencies]
ark-ff = "0.5"
blake2 = "0.10"
burn = { version = "=0.20.1", features = ["ndarray"], optional = true }
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.28.1"
onnx-protobuf = { version = "0.2.3", optional = true }
protobuf = { version = "=3.4.0", optional = true }
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha3 = "0.10"
thiserror = "2.0.12"
tract-onnx = { version = "0.23.0-dev.2", optional = true }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
rand = "0.8.5"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.6"

[[bench]]
name = "hull_benchmark"
harness = false

[[bench]]
name = "vanillastark_benchmark"
harness = false
