[package]
name = "llm-provable-computer-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
llm-provable-computer = { path = "..", version = "0.1.0", features = ["stwo-backend"] }

[[bin]]
name = "phase12_decoding_manifest"
path = "fuzz_targets/phase12_decoding_manifest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "phase14_decoding_manifest"
path = "fuzz_targets/phase14_decoding_manifest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "phase12_shared_lookup_artifact"
path = "fuzz_targets/phase12_shared_lookup_artifact.rs"
test = false
doc = false
bench = false

[[bin]]
name = "phase24_decoding_state_relation_accumulator"
path = "fuzz_targets/phase24_decoding_state_relation_accumulator.rs"
test = false
doc = false
bench = false

[[bin]]
name = "phase25_intervalized_decoding_state_relation"
path = "fuzz_targets/phase25_intervalized_decoding_state_relation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "phase26_folded_intervalized_decoding_state_relation"
path = "fuzz_targets/phase26_folded_intervalized_decoding_state_relation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "phase27_chained_folded_intervalized_decoding_state_relation"
path = "fuzz_targets/phase27_chained_folded_intervalized_decoding_state_relation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "phase28_aggregated_chained_folded_intervalized_decoding_state_relation"
path = "fuzz_targets/phase28_aggregated_chained_folded_intervalized_decoding_state_relation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "phase29_recursive_compression_input_contract"
path = "fuzz_targets/phase29_recursive_compression_input_contract.rs"
test = false
doc = false
bench = false

[[bin]]
name = "phase30_decoding_step_proof_envelope_manifest"
path = "fuzz_targets/phase30_decoding_step_proof_envelope_manifest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "phase35_recursive_compression_target_manifest"
path = "fuzz_targets/phase35_recursive_compression_target_manifest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "phase36_recursive_verifier_harness_receipt"
path = "fuzz_targets/phase36_recursive_verifier_harness_receipt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "phase37_recursive_artifact_chain_harness_receipt"
path = "fuzz_targets/phase37_recursive_artifact_chain_harness_receipt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "phase44d_source_chain_public_output_boundary_binding"
path = "fuzz_targets/phase44d_source_chain_public_output_boundary_binding.rs"
test = false
doc = false
bench = false

[[bin]]
name = "phase45_recursive_verifier_public_input_bridge"
path = "fuzz_targets/phase45_recursive_verifier_public_input_bridge.rs"
test = false
doc = false
bench = false

[[bin]]
name = "phase46_stwo_proof_adapter_receipt"
path = "fuzz_targets/phase46_stwo_proof_adapter_receipt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "phase47_recursive_verifier_wrapper_candidate"
path = "fuzz_targets/phase47_recursive_verifier_wrapper_candidate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "phase48_recursive_proof_wrapper_attempt"
path = "fuzz_targets/phase48_recursive_proof_wrapper_attempt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "phase44d_phase48_against_sources_chain"
path = "fuzz_targets/phase44d_phase48_against_sources_chain.rs"
test = false
doc = false
bench = false

[[bin]]
name = "phase44d_phase48_serialized_chain_differential"
path = "fuzz_targets/phase44d_phase48_serialized_chain_differential.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
